--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "autoprefixer": "^10.3.1",
+    "prettier": "~2.2.1",
+    "sirv-cli": "^1.0.0",
+    "svelte-preprocess": "^4.7.4",
+    "tailwindcss": "^2.2.7"
   }
 }
