--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier": "~2.2.1",
     "sirv-cli": "^1.0.0",
     "svelte-preprocess": "^4.7.4",
-    "tailwindcss": "^2.2.7"
+    "tailwindcss": "^2.2.7",
+    "svelte-material-icons": "^1.0.3"
   }
 }
