--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   },
   "dependencies": {
     "autoprefixer": "^10.3.1",
+    "firebase": "^9.0.0",
     "prettier": "~2.2.1",
     "sirv-cli": "^1.0.0",
+    "svelte-material-icons": "^1.0.3",
     "svelte-preprocess": "^4.7.4",
-    "tailwindcss": "^2.2.7",
-    "svelte-material-icons": "^1.0.3"
+    "tailwindcss": "^2.2.7"
   }
 }
